@@ -29,6 +29,7 @@ wxMSW:
 - wxChoice sizing bug introduced in 2.2.5 fixed (oops) and calculating of
   the size of initially empty wxChoice controls fixed as well
 - jpeg library compilation fixed for newer versions of mingw32 and cygwin
+- controls which don't accep focus don't get it on left mouse click
 
 2.2.5
 -----
